--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="width: 100%; height: 100%;"></div>
+    <div id="root"></div>
   </body>
 </html>
